<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent" android:layout_height="fill_parent">

  <ImageView android:contentDescription="Background image" 
      style="@style/BackgroundImage" />
  
    <LinearLayout 
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <TextView
    android:id="@+id/selectexam_no_exams_available"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/no_exams_available"
    android:textSize="@dimen/textSizeDefault" />
    <TextView
    android:id="@+id/selectexam_click_on_manage_exams"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/click_on_manage_exams_to_install_one_or_more_exams"
    android:textSize="@dimen/textSizeDefault"/>
    <ListView android:layout_width="fill_parent"
              android:layout_height="0dip"
              android:id="@+id/select_exam_list"
              android:layout_weight="1"
              android:background="@android:color/transparent"/>
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/about_window"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#BB000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/paddingDefault"
            android:text="@string/app_name"
            android:textSize="@dimen/textSizeDefault" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/paddingDefault" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/paddingDefault"
                android:text="@string/Version"
                android:textSize="@dimen/textSizeDefault" >
            </TextView>

            <TextView
                android:id="@+id/about_version_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.0"
                android:textSize="@dimen/textSizeDefault" >
            </TextView>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/paddingDefault"
            android:text="@string/Copyright"
            android:textSize="@dimen/textSizeDefault" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/paddingDefault"
            android:text="@string/text_about_atcomputing"
            android:textSize="@dimen/textSizeDefault" >
        </TextView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/Visit_atcomputing"
            android:textSize="@dimen/textSizeDefault" >
        </TextView>
    </LinearLayout>
</RelativeLayout>