<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/startexam_examinfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddingSmall"
            android:background="#AA404040"
            android:orientation="vertical"
            android:padding="@dimen/paddingSmall"
            android:layout_alignParentBottom="true" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/startexam_examtitle_text"
                    style="@style/TextWhite"
                    android:layout_alignParentLeft="true"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/startexam_examtitle_value"
                    style="@style/TextWhite"
                    android:layout_alignParentRight="true"
                    android:text="" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/startexam_installed_on_text"
                    style="@style/TextWhite"
                    android:layout_alignParentLeft="true"
                    android:text="@string/installed_on" />

                <TextView
                    android:id="@+id/startexam_installed_on_value"
                    style="@style/TextWhite"
                    android:layout_alignParentRight="true"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/startexam_amount_of_items_text"
                    style="@style/TextWhite"
                    android:layout_alignParentLeft="true"
                    android:text="@string/Amount_of_questions" />

                <TextView
                    android:id="@+id/startexam_amount_of_items_value"
                    style="@style/TextWhite"
                    android:layout_alignParentRight="true"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/startexam_items_needed_to_pass_text"
                    style="@style/TextWhite"
                    android:layout_alignParentLeft="true"
                    android:text="@string/Required_to_pass" />

                <TextView
                    android:id="@+id/startexam_items_needed_to_pass_value"
                    style="@style/TextWhite"
                    android:layout_alignParentRight="true"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/startexam_timelimit_text"
                    style="@style/TextWhite"
                    android:layout_alignParentLeft="true"
                    android:text="@string/Time_limit_in_minutes" />

                <TextView
                    android:id="@+id/startexam_timelimit_value"
                    style="@style/TextWhite"
                    android:layout_alignParentRight="true"
                    android:text="" />
            </RelativeLayout>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/startexam_history_textview_linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent_background" >

        <TextView
            android:id="@+id/startexam_history_textview_noscoresavailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_previous_scores_available"
            android:textSize="@dimen/textSizeDefault" />

        <TextView
            android:id="@+id/startexam_history_textview_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingDefault"
            android:textSize="@dimen/textSizeDefault" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/startexam_history_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="invisible" />

        <TextView
            style="@style/tableHeaderText"
            android:text="@string/Date" />

        <TextView
            style="@style/tableHeaderText"
            android:text="@string/Score" />

        <TextView
            style="@style/tableHeaderText"
            android:text="@string/Pass" />
    </LinearLayout>

    <ListView
        android:id="@+id/startexam_history_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/startexam_examinfo"
        android:layout_below="@id/startexam_history_header"
        android:background="@color/transparent_background"
        android:cacheColorHint="#00000000" />

</RelativeLayout>