<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/question_toplayout_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/Prev"
            android:textSize="@dimen/textSizeDefault" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/Next"
            android:textSize="@dimen/textSizeDefault" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="top" >

        <TextView
            android:id="@+id/question_textQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/paddingDefault"
            android:paddingRight="@dimen/paddingDefault"
            android:text="@string/Question"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSizeDefault" />

        <TextView
            android:id="@+id/textQuestionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/question_textQuestion"
            android:paddingRight="@dimen/paddingDefault"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSizeDefault" />

        <TextView
            android:id="@+id/textExamTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/paddingDefault"
            android:text="@string/No_time_limit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSizeDefault" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/questionAndChoicesMainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:layout_above="@id/buttonLayout" >

        <LinearLayout
            android:id="@+id/question_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:id="@+id/horizontalScrollViewExhibit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#333333"
                android:scrollbars="none" >

                <TextView
                    android:id="@+id/textExhibit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingDefault"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/textSizeDefault"
                    android:typeface="monospace" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingDefault"
                android:textColor="#CCCCCC"
                android:textSize="@dimen/textSizeDefault"
                android:typeface="serif" />

            <EditText
                android:id="@+id/question_open_answer_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="@dimen/textSizeDefault"
                android:visibility="gone" />

            <HorizontalScrollView
                android:id="@+id/question_multiplechoice_horizontalScrollView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/question_multiplechoice_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>